<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <!--<item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />-->
    <item
        android:id="@+id/menu_right"
        android:title="@string/Next"
        android:icon="@drawable/ic_chevron_right_white_36dp"
        android:orderInCategory="400"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_left"
        android:title="@string/Previous"
        android:icon="@drawable/ic_chevron_left_white_36dp"
        android:orderInCategory="300"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_capture"
        android:title="@string/Camera"
        android:icon="@drawable/ic_camera_alt_white_48dp"
        android:orderInCategory="200"
        app:showAsAction="always"/>
    <item android:id="@+id/action_example" android:title="Copy database"
        app:showAsAction="never"
        android:orderInCategory="500"/>

</menu>
